// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded approved role based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  flex: 1;
}

.c19 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c20 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c23 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #00BFA6;
  border-radius: 50%;
}

.c25 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c26 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c29 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c31 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c32 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c34 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-bottom: 8px;
  border: 1px solid;
  border-color: #222C59;
  border-radius: 2px;
}

.c40 {
  box-sizing: border-box;
  margin-top: 16px;
  margin-left: 4px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255,255,255,0.07);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 60px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c30 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-top: 24px;
}

.c30:focus-visible,
.teleport-button__force-focus-visible .c30 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c30:hover,
.teleport-button__force-hover .c30 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c30:active,
.teleport-button__force-active .c30 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c30:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c21 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.54);
}

.c24 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c12 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #00BFA6;
  color: #000000;
}

.c38 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #00BFA6;
  color: #000000;
  width: 10px;
}

.c39 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FFAB00;
  color: #000000;
  width: 10px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-right: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.035px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 8px;
}

.c37 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 16px;
}

.c41 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  color: rgba(255, 255, 255, 0.72);
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: baseline;
  flex-wrap: wrap;
}

.c15 {
  display: flex;
  align-items: baseline;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c27 {
  display: flex;
  align-items: baseline;
}

.c35 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c18 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c17 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c5 {
  background: #344179;
}

.c36 {
  background: rgba(255,255,255,0.07);
}

.c33 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              kind="success"
              style="font-weight: bold;"
            >
              APPROVED
            </span>
            <h3
              class="c8"
            >
              <div
                class="c0 c9"
              >
                <div
                  class="c10"
                  style="max-width: 120px;"
                  title="Sam"
                >
                  Sam
                </div>
                <div
                  class="c11"
                  style="flex-shrink: 0; white-space: nowrap;"
                >
                  is requesting roles:
                </div>
                <div
                  class="c0"
                >
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    admin
                  </div>
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    kaco
                  </div>
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    ziuzzow
                  </div>
                </div>
                <div
                  class="c13"
                >
                  for 
                  5 days
                  , starting 
                  12/01/2020 at 12:00AM
                </div>
              </div>
            </h3>
          </div>
          <div
            class="c14 c15"
          >
            <button
              class="c16"
              fill="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c17"
          style="position: relative;"
        >
          <div
            class="c18"
          />
          <div
            class="c19 c6"
            style="position: relative;"
          >
            <div
              class="c20"
              style="display: flex;"
            >
              <span
                class="c21 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c22"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                2 hours ago
              </span>
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="c19 c6"
              style="position: relative;"
            >
              <div
                class="c23"
                style="display: flex;"
              >
                <span
                  class="c24 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c22"
              >
                <b>
                  alice
                </b>
                 
                <span>
                  approved
                   this request 
                  26 hours ago
                </span>
              </div>
            </div>
            <div
              class="c25"
              style="position: relative;"
            >
              <div
                class="c26 c27"
              >
                <h3
                  class="c28"
                >
                  alice
                </h3>
                <div
                  class="c13"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c29"
              >
                Approving for developer role not admin. Admins access is not needed for this request.
              </div>
            </div>
            <div
              class="c19 c6"
              style="position: relative;"
            >
              <div
                class="c23"
                style="display: flex;"
              >
                <span
                  class="c24 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c22"
              >
                <b>
                  test-long-user-name@testing.com
                </b>
                 
                <span>
                  approved
                   this request 
                  1 minute ago
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="c30"
        fill="filled"
      >
        Assume Roles
      </button>
    </div>
    <div
      class="c31"
    >
      <div
        class="c32 c1 c33"
      >
        <h3
          class="c28"
        >
          Reviewers
        </h3>
      </div>
      <div
        class="c34 c35 c36"
      >
        <div
          class="c37"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c38"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c34 c35 c36"
      >
        <div
          class="c37"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c39"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c34 c35 c36"
      >
        <div
          class="c37"
          style="white-space: nowrap; max-width: 200px;"
          title="test-long-user-name@testing.com"
        >
          test-long-user-name@testing.com
        </div>
        <span
          class="c38"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c40"
      >
        <div
          class="c41"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded denied role based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  flex: 1;
}

.c19 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c20 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c23 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c24 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c27 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c28 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #FF6257;
  border-radius: 50%;
}

.c30 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c31 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c33 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-bottom: 8px;
  border: 1px solid;
  border-color: #222C59;
  border-radius: 2px;
}

.c39 {
  box-sizing: border-box;
  margin-top: 16px;
  margin-left: 4px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255,255,255,0.07);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 60px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c21 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.54);
}

.c29 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c12 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FF6257;
  color: #000000;
}

.c37 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FF6257;
  color: #000000;
  width: 10px;
}

.c38 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FFAB00;
  color: #000000;
  width: 10px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-right: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.035px;
}

.c26 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 8px;
}

.c36 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 16px;
}

.c40 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  color: rgba(255, 255, 255, 0.72);
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: baseline;
  flex-wrap: wrap;
}

.c15 {
  display: flex;
  align-items: baseline;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c25 {
  display: flex;
  align-items: baseline;
}

.c34 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c18 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c17 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c5 {
  background: #344179;
}

.c35 {
  background: rgba(255,255,255,0.07);
}

.c32 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              kind="danger"
              style="font-weight: bold;"
            >
              DENIED
            </span>
            <h3
              class="c8"
            >
              <div
                class="c0 c9"
              >
                <div
                  class="c10"
                  style="max-width: 120px;"
                  title="Sam"
                >
                  Sam
                </div>
                <div
                  class="c11"
                  style="flex-shrink: 0; white-space: nowrap;"
                >
                  is requesting roles:
                </div>
                <div
                  class="c0"
                >
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    admin
                  </div>
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    ruhh
                  </div>
                </div>
                <div
                  class="c13"
                >
                  for 
                  4 days
                  , starting 
                  12/02/2020 at 12:00AM
                </div>
              </div>
            </h3>
          </div>
          <div
            class="c14 c15"
          >
            <button
              class="c16"
              fill="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c17"
          style="position: relative;"
        >
          <div
            class="c18"
          />
          <div
            class="c19 c6"
            style="position: relative;"
          >
            <div
              class="c20"
              style="display: flex;"
            >
              <span
                class="c21 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c22"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                35 minutes ago
              </span>
            </div>
          </div>
          <div
            class="c23"
            style="position: relative;"
          >
            <div
              class="c24 c25"
            >
              <h3
                class="c26"
              >
                Sam
              </h3>
              <div
                class="c13"
              >
                35 minutes ago
              </div>
            </div>
            <div
              class="c27"
            >
              Some short request reason
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="c19 c6"
              style="position: relative;"
            >
              <div
                class="c28"
                style="display: flex;"
              >
                <span
                  class="c29 icon icon-circlecross"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M15.5303 8.46967C15.8232 8.76256 15.8232 9.23744 15.5303 9.53033L13.0607 12L15.5303 14.4697C15.8232 14.7626 15.8232 15.2374 15.5303 15.5303C15.2374 15.8232 14.7626 15.8232 14.4697 15.5303L12 13.0607L9.53033 15.5303C9.23744 15.8232 8.76256 15.8232 8.46967 15.5303C8.17678 15.2374 8.17678 14.7626 8.46967 14.4697L10.9393 12L8.46967 9.53033C8.17678 9.23744 8.17678 8.76256 8.46967 8.46967C8.76256 8.17678 9.23744 8.17678 9.53033 8.46967L12 10.9393L14.4697 8.46967C14.7626 8.17678 15.2374 8.17678 15.5303 8.46967Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c22"
              >
                <b>
                  alice
                </b>
                 
                <span>
                  denied
                   this request 
                  26 hours ago
                </span>
              </div>
            </div>
            <div
              class="c23"
              style="position: relative;"
            >
              <div
                class="c24 c25"
              >
                <h3
                  class="c26"
                >
                  alice
                </h3>
                <div
                  class="c13"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c27"
              >
                Not today
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c30"
    >
      <div
        class="c31 c1 c32"
      >
        <h3
          class="c26"
        >
          Reviewers
        </h3>
      </div>
      <div
        class="c33 c34 c35"
      >
        <div
          class="c36"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c37"
          kind="danger"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c33 c34 c35"
      >
        <div
          class="c36"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c38"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c39"
      >
        <div
          class="c40"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending role based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  flex: 1;
}

.c21 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c22 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c25 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c26 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c29 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c30 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c32 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c40 {
  box-sizing: border-box;
  max-width: 500px;
  margin-bottom: 24px;
}

.c45 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c46 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c48 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-bottom: 8px;
  border: 1px solid;
  border-color: #222C59;
  border-radius: 2px;
}

.c53 {
  box-sizing: border-box;
  margin-top: 16px;
  margin-left: 4px;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255,255,255,0.07);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 60px;
}

.c18:focus-visible,
.teleport-button__force-focus-visible .c18 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c18:hover,
.teleport-button__force-hover .c18 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c18:active,
.teleport-button__force-active .c18 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c18:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c44 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c44:focus-visible,
.teleport-button__force-focus-visible .c44 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c44:hover,
.teleport-button__force-hover .c44 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c44:active,
.teleport-button__force-active .c44 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c44:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c23 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.54);
}

.c12 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c41 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
}

.c52 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FFAB00;
  color: #000000;
  width: 10px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-right: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 10px;
  font-weight: 400;
  line-height: 16px;
  letter-spacing: 0.013px;
  margin-left: 4px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.035px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 8px;
}

.c31 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 16px;
}

.c39 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c51 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 16px;
}

.c54 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  color: rgba(255, 255, 255, 0.72);
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: baseline;
  flex-wrap: wrap;
}

.c15 {
  display: flex;
  align-items: baseline;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c27 {
  display: flex;
  align-items: baseline;
}

.c33 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c49 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c42 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 50px;
  height: 80px;
  font-size: 16px;
  padding: 16px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background: inherit;
  margin-top: 4px;
  resize: vertical;
}

.c42::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c42:hover,
.c42:focus,
.c42:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c42:read-only {
  cursor: not-allowed;
}

.c42:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c34 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c37 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c35 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c36 {
  opacity: 1;
}

.c38 {
  opacity: 0.5;
}

.c43 {
  font-size: 14px;
  min-height: 100px;
}

.c20 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c19 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c17 {
  font-style: italic;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c5 {
  background: #344179;
}

.c50 {
  background: rgba(255,255,255,0.07);
}

.c47 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <h3
              class="c8"
            >
              <div
                class="c0 c9"
              >
                <div
                  class="c10"
                  style="max-width: 120px;"
                  title="Sam"
                >
                  Sam
                </div>
                <div
                  class="c11"
                  style="flex-shrink: 0; white-space: nowrap;"
                >
                  is requesting roles:
                </div>
                <div
                  class="c0"
                >
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    admin
                  </div>
                </div>
                <div
                  class="c13"
                >
                  for 
                  1 day
                  , starting 
                  12/05/2020 at 12:00AM
                </div>
              </div>
            </h3>
          </div>
          <div
            class="c14 c15"
          >
            <div
              class="c16 c17"
            >
              Request expires in 
              2 hours
            </div>
            <button
              class="c18"
              fill="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c19"
          style="position: relative;"
        >
          <div
            class="c20"
          />
          <div
            class="c21 c6"
            style="position: relative;"
          >
            <div
              class="c22"
              style="display: flex;"
            >
              <span
                class="c23 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c24"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                1 minute ago
              </span>
            </div>
          </div>
          <div
            class="c25"
            style="position: relative;"
          >
            <div
              class="c26 c27"
            >
              <h3
                class="c28"
              >
                Sam
              </h3>
              <div
                class="c13"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c29"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
          </div>
          <div
            class="c30"
            style="position: relative;"
          >
            <div
              class="c26"
            >
              <h3
                class="c31"
              >
                loggedInUsername
                 - add a review
              </h3>
            </div>
            <div
              class="c29"
            >
              <div
                class="c32 c33"
              >
                <label
                  class="c34"
                >
                  <input
                    checked=""
                    class="c35"
                    name="DENIED"
                    type="radio"
                    value="DENIED"
                  />
                  <span
                    class="c36"
                  >
                    Reject request
                  </span>
                </label>
                <label
                  class="c34"
                >
                  <input
                    class="c35"
                    name="APPROVED"
                    type="radio"
                    value="APPROVED"
                  />
                  <span
                    class="c36"
                  >
                    Approve short-term access
                     (1 day)
                  </span>
                </label>
                <label
                  class="c37"
                >
                  <input
                    class="c35"
                    disabled=""
                    name="PROMOTED"
                    type="radio"
                    value="PROMOTED"
                  />
                  <span
                    class="c38"
                  >
                    <div
                      class="c0 c1"
                    >
                      <div
                        class="c0 c6"
                      >
                        <div
                          class="c39"
                        >
                          Approve long-term access via Access List with the requested resources
                        </div>
                      </div>
                    </div>
                  </span>
                </label>
              </div>
              <div
                class="c40"
              >
                <label
                  class="c41"
                >
                  Message
                  <textarea
                    autocomplete="off"
                    class="c42 c43"
                    placeholder="Optional message..."
                  />
                </label>
              </div>
              <button
                class="c44"
                fill="filled"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c45"
    >
      <div
        class="c46 c1 c47"
      >
        <h3
          class="c28"
        >
          Reviewers
        </h3>
      </div>
      <div
        class="c48 c49 c50"
      >
        <div
          class="c51"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c52"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c48 c49 c50"
      >
        <div
          class="c51"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c52"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c53"
      >
        <div
          class="c54"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending search based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  flex: 1;
}

.c21 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c22 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c25 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c26 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c29 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c30 {
  box-sizing: border-box;
  padding-top: 0;
  padding-left: 16px;
  padding-right: 0;
  padding-bottom: 16px;
  background-color: #344179;
}

.c34 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c36 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c44 {
  box-sizing: border-box;
  max-width: 500px;
  margin-bottom: 24px;
}

.c49 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c50 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c52 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-bottom: 8px;
  border: 1px solid;
  border-color: #222C59;
  border-radius: 2px;
}

.c57 {
  box-sizing: border-box;
  margin-top: 16px;
  margin-left: 4px;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255,255,255,0.07);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 60px;
}

.c18:focus-visible,
.teleport-button__force-focus-visible .c18 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c18:hover,
.teleport-button__force-hover .c18 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c18:active,
.teleport-button__force-active .c18 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c18:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c48 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c48:focus-visible,
.teleport-button__force-focus-visible .c48 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c48:hover,
.teleport-button__force-hover .c48 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c48:active,
.teleport-button__force-active .c48 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c48:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c23 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.54);
}

.c12 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c45 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-bottom: 0;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
}

.c56 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FFAB00;
  color: #000000;
  width: 10px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-right: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 10px;
  font-weight: 400;
  line-height: 16px;
  letter-spacing: 0.013px;
  margin-left: 4px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: 0.035px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 8px;
}

.c35 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 16px;
}

.c43 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c55 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 16px;
}

.c58 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  color: rgba(255, 255, 255, 0.72);
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: baseline;
  flex-wrap: wrap;
}

.c15 {
  display: flex;
  align-items: baseline;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c27 {
  display: flex;
  align-items: baseline;
}

.c37 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c53 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c46 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 50px;
  height: 80px;
  font-size: 16px;
  padding: 16px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background: inherit;
  margin-top: 4px;
  resize: vertical;
}

.c46::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c46:hover,
.c46:focus,
.c46:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c46:read-only {
  cursor: not-allowed;
}

.c46:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c32 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c32>thead>tr>th,
.c32>tbody>tr>th,
.c32>tfoot>tr>th,
.c32>thead>tr>td,
.c32>tbody>tr>td,
.c32>tfoot>tr>td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c32>thead>tr>th:first-child,
.c32>tbody>tr>th:first-child,
.c32>tfoot>tr>th:first-child,
.c32>thead>tr>td:first-child,
.c32>tbody>tr>td:first-child,
.c32>tfoot>tr>td:first-child {
  padding-left: 24px;
}

.c32>thead>tr>th:last-child,
.c32>tbody>tr>th:last-child,
.c32>tfoot>tr>th:last-child,
.c32>thead>tr>td:last-child,
.c32>tbody>tr>td:last-child,
.c32>tfoot>tr>td:last-child {
  padding-right: 24px;
}

.c32>tbody>tr>td {
  vertical-align: middle;
}

.c32>thead>tr>th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c32>thead>tr>th svg {
  height: 12px;
}

.c32>tbody>tr>td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c32 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c32 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c32 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.12),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 2px 4px -1px rgba(0, 0, 0, 0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c32 tbody tr:hover +tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c38 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c41 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c39 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c40 {
  opacity: 1;
}

.c42 {
  opacity: 0.5;
}

.c47 {
  font-size: 14px;
  min-height: 100px;
}

.c20 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c33 {
  width: 90%;
}

.c33>tbody>tr>td {
  vertical-align: middle;
}

.c19 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c17 {
  font-style: italic;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c5 {
  background: #344179;
}

.c31 {
  margin: 0 auto;
}

.c54 {
  background: rgba(255,255,255,0.07);
}

.c51 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <h3
              class="c8"
            >
              <div
                class="c0 c9"
              >
                <div
                  class="c10"
                  style="max-width: 120px;"
                  title="Sam"
                >
                  Sam
                </div>
                <div
                  class="c11"
                  style="flex-shrink: 0; white-space: nowrap;"
                >
                  is requesting roles:
                </div>
                <div
                  class="c0"
                >
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    test
                  </div>
                </div>
                <div
                  class="c13"
                >
                  for 
                  2 days
                  , starting 
                  12/04/2020 at 12:00AM
                </div>
              </div>
            </h3>
          </div>
          <div
            class="c14 c15"
          >
            <div
              class="c16 c17"
            >
              Request expires in 
              1 hour
            </div>
            <button
              class="c18"
              fill="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c19"
          style="position: relative;"
        >
          <div
            class="c20"
          />
          <div
            class="c21 c6"
            style="position: relative;"
          >
            <div
              class="c22"
              style="display: flex;"
            >
              <span
                class="c23 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c24"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                1 minute ago
              </span>
            </div>
          </div>
          <div
            class="c25"
            style="position: relative;"
          >
            <div
              class="c26 c27"
            >
              <h3
                class="c28"
              >
                Sam
              </h3>
              <div
                class="c13"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c29"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
            <div
              class="c30 c31"
            >
              <table
                class="c32 c33"
              >
                <thead>
                  <tr>
                    <th
                      style="cursor: default;"
                    >
                      Cluster Name
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource Kind
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource Name
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      app-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      db
                    </td>
                    <td>
                      db-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      node
                    </td>
                    <td>
                      node-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      user_group
                    </td>
                    <td>
                      user-group-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      kube_cluster
                    </td>
                    <td>
                      kube-cluster-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      windows_desktop
                    </td>
                    <td>
                      windows-desktop-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      Some Friendly Name
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c34"
            style="position: relative;"
          >
            <div
              class="c26"
            >
              <h3
                class="c35"
              >
                loggedInUsername
                 - add a review
              </h3>
            </div>
            <div
              class="c29"
            >
              <div
                class="c36 c37"
              >
                <label
                  class="c38"
                >
                  <input
                    checked=""
                    class="c39"
                    name="DENIED"
                    type="radio"
                    value="DENIED"
                  />
                  <span
                    class="c40"
                  >
                    Reject request
                  </span>
                </label>
                <label
                  class="c38"
                >
                  <input
                    class="c39"
                    name="APPROVED"
                    type="radio"
                    value="APPROVED"
                  />
                  <span
                    class="c40"
                  >
                    Approve short-term access
                     (2 days)
                  </span>
                </label>
                <label
                  class="c41"
                >
                  <input
                    class="c39"
                    disabled=""
                    name="PROMOTED"
                    type="radio"
                    value="PROMOTED"
                  />
                  <span
                    class="c42"
                  >
                    <div
                      class="c0 c1"
                    >
                      <div
                        class="c0 c6"
                      >
                        <div
                          class="c43"
                        >
                          Approve long-term access via Access List with the requested resources
                        </div>
                      </div>
                    </div>
                  </span>
                </label>
              </div>
              <div
                class="c44"
              >
                <label
                  class="c45"
                >
                  Message
                  <textarea
                    autocomplete="off"
                    class="c46 c47"
                    placeholder="Optional message..."
                  />
                </label>
              </div>
              <button
                class="c48"
                fill="filled"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c49"
    >
      <div
        class="c50 c1 c51"
      >
        <h3
          class="c28"
        >
          Reviewers
        </h3>
      </div>
      <div
        class="c52 c53 c54"
      >
        <div
          class="c55"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c56"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c52 c53 c54"
      >
        <div
          class="c55"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c56"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c57"
      >
        <div
          class="c58"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;
